[INFER] Mark unexpected result when RegExp returns its own argument, bug 649771.