js/src/jit-test/tests/basic/bug649771.js
@@ -1,0 +1,7 @@
+function f(o) {
+    f = o.constructor;
+    eval('delete o.x');
+}
+for(var i=0; i<3; i++) {
+    f(RegExp.prototype);
+}
